# csad2025KI407OstashevskyiVolodymyr19

./: CMakeLists.txt  Copilot_HistoryTask5.txt  HistoryCopilotTask3.txt  History_Copilot_task4.txt  LICENSE  README.md  ai_assistant_history.md  ci.bat  ci.sh  copilot_history.txt  main.cpp  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
src/uart_lab2/: baud_gen.vhd  uart_rx.vhd  uart_tb.vhd  uart_top.vhd  uart_tx.vhd
tests/: unit_tests.cpp
